--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,46 +1,47 @@
-name: Manual workflow
-
-on: [push]
+name: Run Mocha tests and publish Allure report
+on: 
+  push:
+    branches:
+      - main  
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '14'  
 
       - name: Install dependencies
-        run: npm install 
+        run: npm install
 
-      - name: Run tests
-        run: npm test 
+      - name: Run Mocha tests
+        run: npm test
 
       - name: Load test report history
         uses: actions/checkout@v3
-        if: always()
+        if: always()  
         continue-on-error: true
         with:
-          ref: gh-pages
-          path: gh-pages
+          ref: gh-pages  
+          path: gh-pages  
 
-      - name: Build test report
+      - name: Build Allure test report
         uses: simple-elf/allure-report-action@v1.7
         if: always()
         with:
-          gh_pages: gh-pages
-          allure_history: allure-history
-          allure_results: build/allure-results
+          gh_pages: gh-pages 
+          allure_history: allure-history 
+          allure_results: allure-results  
 
-      - name: Publish test report
+      - name: Publish Allure test report
         uses: peaceiris/actions-gh-pages@v3
         if: always()
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: allure-history
+          github_token: ${{ secrets.GITHUB_TOKEN }}  
+          publish_branch: gh-pages  
+          publish_dir: allure-history  
