--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -42,6 +42,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         if: always()
         with:
-          github_token: ${{ secrets.token }}  
+          github_token: ${{ secrets.TOKEN }}  
           publish_branch: gh-pages  
           publish_dir: allure-history  
