--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,30 +18,38 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        
+      - run: npm install mocha allure-mocha
+      - run: npm install --global surge
 
-      - name: Run Mocha tests
-        run: npm run regression
+      - run: node runner.js || true
+      - run: allure serve allure-results
+      - run: allure generate allure-results --clean -o allure-report
+      - run: surge allure-report/ jangkau-api.surge.sh --token ${{ secrets.SURGE_TOKEN }}
 
-      - name: Load test report history
-        uses: actions/checkout@v3
-        if: always()  
-        continue-on-error: true
-        with:
-          ref: gh-pages  
-          path: gh-pages  
+      # - name: Run Mocha tests
+      #   run: npm run regression
 
-      - name: Build Allure test report
-        uses: simple-elf/allure-report-action@v1.7
-        if: always()
-        with:
-          gh_pages: gh-pages 
-          allure_history: allure-history 
-          allure_results: allure-results  
+      # - name: Load test report history
+      #   uses: actions/checkout@v3
+      #   if: always()  
+      #   continue-on-error: true
+      #   with:
+      #     ref: gh-pages  
+      #     path: gh-pages  
 
-      - name: Publish Allure test report
-        uses: peaceiris/actions-gh-pages@v3
-        if: always()
-        with:
-          github_token: ${{ secrets.TOKEN }}  
-          publish_branch: gh-pages  
-          publish_dir: allure-history  
+      # - name: Build Allure test report
+      #   uses: simple-elf/allure-report-action@v1.7
+      #   if: always()
+      #   with:
+      #     gh_pages: gh-pages 
+      #     allure_history: allure-history 
+      #     allure_results: allure-results  
+
+      # - name: Publish Allure test report
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   if: always()
+      #   with:
+      #     github_token: ${{ secrets.TOKEN }}  
+      #     publish_branch: gh-pages  
+      #     publish_dir: allure-history  
