--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,8 +1,8 @@
 name: Run Mocha tests and publish Allure report
-on: 
+on:
   push:
     branches:
-      - main  
+      - main
 
 jobs:
   test:
@@ -14,42 +14,31 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'  
+          node-version: '20'
 
       - name: Install dependencies
-        run: npm install
-        
-      - run: npm install mocha allure-mocha
-      - run: npm install --global surge
+        run: |
+          npm install
+          npm install mocha allure-mocha surge
 
-      - run: node runner.js || true
-      - run: allure serve allure-results
-      - run: allure generate allure-results --clean -o allure-report
-      - run: surge allure-report/ jangkau-api.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+      - name: Run Mocha tests and generate Allure results
+        run: |
+          mocha --reporter allure-mocha --reporter-options resultsDir=allure-results test/scenarios/*.spec.js || true
 
-      # - name: Run Mocha tests
-      #   run: npm run regression
+      - name: Generate Allure report
+        run: allure generate allure-results --clean -o allure-report
 
-      # - name: Load test report history
-      #   uses: actions/checkout@v3
-      #   if: always()  
-      #   continue-on-error: true
-      #   with:
-      #     ref: gh-pages  
-      #     path: gh-pages  
+      - name: Serve Allure report locally
+        run: |
+          allure serve allure-results || true
 
-      # - name: Build Allure test report
-      #   uses: simple-elf/allure-report-action@v1.7
-      #   if: always()
-      #   with:
-      #     gh_pages: gh-pages 
-      #     allure_history: allure-history 
-      #     allure_results: allure-results  
+      - name: Deploy Allure report to Surge
+        run: surge allure-report/ jangkau-api.surge.sh --token ${{ secrets.SURGE_TOKEN }}
 
-      # - name: Publish Allure test report
+      # Optional: If you want to publish the report to GitHub Pages
+      # - name: Publish Allure report to GitHub Pages
       #   uses: peaceiris/actions-gh-pages@v3
-      #   if: always()
       #   with:
-      #     github_token: ${{ secrets.TOKEN }}  
-      #     publish_branch: gh-pages  
-      #     publish_dir: allure-history  
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_branch: gh-pages
+      #     publish_dir: allure-report
