--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -21,6 +21,11 @@ jobs:
           npm install
           npm install mocha allure-mocha surge
 
+      # Install Allure CLI
+      - name: Install Allure CLI
+        run: |
+          npm install -g allure-commandline --save-dev
+
       - name: Run Mocha tests and generate Allure results
         run: |
           mocha --reporter allure-mocha --reporter-options resultsDir=allure-results test/scenarios/*.spec.js || true
@@ -28,9 +33,8 @@ jobs:
       - name: Generate Allure report
         run: allure generate allure-results --clean -o allure-report
 
-      - name: Serve Allure report locally
-        run: |
-          allure serve allure-results || true
+      - name: Serve Allure report locally (for testing purposes)
+        run: allure serve allure-results || true
 
       - name: Deploy Allure report to Surge
         run: surge allure-report/ jangkau-api.surge.sh --token ${{ secrets.SURGE_TOKEN }}
