--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -19,12 +19,17 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
-          npm install mocha allure-mocha surge
+          npm install mocha allure-mocha
 
       # Install Allure CLI
       - name: Install Allure CLI
         run: |
           npm install -g allure-commandline --save-dev
+
+      # Install Surge CLI
+      - name: Install Surge CLI
+        run: |
+          npm install -g surge
 
       - name: Run Mocha tests and generate Allure results
         run: |
