--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run Mocha tests and generate Allure results
         run: |
-          node runner.js
+          node runner.js || true
 
       - name: Generate Allure report
         run: allure generate allure-results --clean -o allure-report
