--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,8 +1,8 @@
 name: Run Mocha tests and publish Allure report
-on:
+on: 
   push:
     branches:
-      - main
+      - main  
 
 jobs:
   test:
@@ -14,35 +14,34 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: '20'  
 
       - name: Install dependencies
-        run: |
-          npm install
-          npm install mocha allure-mocha
+        run: npm install
 
-      - name: Install Allure CLI
-        run: |
-          npm install -g allure-commandline --save-dev
+      - name: Run Mocha tests
+        run: npm run regression
 
-      - name: Install Surge CLI
-        run: |
-          npm install -g surge
+      - name: Load test report history
+        uses: actions/checkout@v3
+        if: always()  
+        continue-on-error: true
+        with:
+          ref: gh-pages  
+          path: gh-pages  
 
-      - name: Run Mocha tests and generate Allure results
-        run: |
-          node runner.js || true
+      - name: Build Allure test report
+        uses: simple-elf/allure-report-action@v1.7
+        if: always()
+        with:
+          gh_pages: gh-pages 
+          allure_history: allure-history 
+          allure_results: allure-results  
 
-      - name: Generate Allure report
-        run: allure generate allure-results --clean -o allure-report
-
-      - name: Deploy Allure report to Surge
-        run: surge allure-report/ jangkau-api.surge.sh --token ${{ secrets.SURGE_TOKEN }}
-
-      # Optional: If you want to publish the report to GitHub Pages
-      # - name: Publish Allure report to GitHub Pages
-      #   uses: peaceiris/actions-gh-pages@v3
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     publish_branch: gh-pages
-      #     publish_dir: allure-report
+      - name: Publish Allure test report
+        uses: peaceiris/actions-gh-pages@v3
+        if: always()
+        with:
+          github_token: ${{ secrets.TOKEN }}  
+          publish_branch: gh-pages  
+          publish_dir: allure-history
